%% Class Diagram - Simplified High-Level Version
%% MyAIStorybook Core Classes and Relationships
%% Focuses on essential classes for better readability

classDiagram
    %% Core Domain Classes
    class Story {
        +string title
        +string setting
        +List~Scene~ scenes
        +List~Character~ characters
        +string language
    }
    
    class Scene {
        +int scene_number
        +string text
        +string image_description
        +string image_path
    }
    
    class Character {
        +string name
        +string description
        +string appearance
    }
    
    %% Agent Classes (Core)
    class PromptAgent {
        +process_prompt(prompt) tuple
        +classify_prompt(prompt) string
    }
    
    class WriterAgent {
        +generate_story(prompt) tuple
        +create_dialogue() string
    }
    
    class ImageAgent {
        +generate_image(prompt, filename) string
        +generate_character_consistency() string
    }
    
    class DirectorAgent {
        +create_story(user_prompt, generate_images) dict
        +orchestrate_pipeline() dict
    }
    
    %% UI Classes
    class FrontendApp {
        +handle_user_input() void
        +display_story(story) void
    }
    
    class StoryInput {
        +validate_input() bool
        +submit_prompt() void
    }
    
    class StoryDisplay {
        +render_story(story) void
        +handle_navigation() void
    }
    
    %% API Classes
    class FastAPIApp {
        +handle_requests() Response
        +serve_static_files() File
    }
    
    %% Relationships
    Story "1" *-- "3..*" Scene : contains
    Story "1" *-- "1..*" Character : features
    
    DirectorAgent o-- PromptAgent : uses
    DirectorAgent o-- WriterAgent : uses
    DirectorAgent ..> ImageAgent : optionally uses
    
    FrontendApp o-- StoryInput : contains
    FrontendApp o-- StoryDisplay : contains
    
    FastAPIApp o-- DirectorAgent : uses
